# tree-sitter-int

./: CMakeLists.txt  README.org  grammar.bnf  grammar.js  package-lock.json  package.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
